# StereoEventRecorder

./: CMakeLists.txt  README.md  main.cpp
